--- a/style.css
+++ b/style.css
@@ -1,3 +1,10 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@500&family=Roboto&display=swap');
+
+*{
+    padding: 0;
+    margin: 0;
+    font-family: "Roboto" , sans-serifg;
+}
 body {
   margin: 0;
 }
