--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@
 *{
     padding: 0;
     margin: 0;
-    font-family: "Roboto" , sans-serifg;
+    font-family: "Roboto" , sans-serif;
 }
 body {
   margin: 0;
@@ -16,4 +16,11 @@ body {
 
 .mx-auto {
   width: 500px;
+}
+hr{
+    color: black;
+}
+ul{
+    list-style: none;
+    text-decoration: none;
 }
