--- a/style.css
+++ b/style.css
@@ -25,8 +25,21 @@ ul{
     text-decoration: none;
 }
 .card mb-3{
-  max-width: 800px;
+  max-width: 500px;
 }
 .card-text{
     max-width: 400px;
+}
+
+#c1 {
+  width: 1000px;
+}
+
+.img1 {
+  width: 100%;
+  height: 100%;
+}
+
+.lang {
+  border-right: 1px solid;
 }
