--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@
 * {
   padding: 0;
   margin: 0;
-  font-family: "Roboto" , sans-serif;
+  font-family: "Roboto", sans-serif;
 }
 
 body {
@@ -28,7 +28,7 @@ ul {
   text-decoration: none;
 }
 
-.card mb-3 {
+.card .mb-3 {
   max-width: 500px;
 }
 
